--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,10 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Press+Start+2P')
+    link(rel='stylesheet', href='https://unpkg.com/nes.css@2.2.0/css/nes.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    h1 Pattern Journal
     block content
+    include ./footer.pug
