--- a/views/pattern.pug
+++ b/views/pattern.pug
@@ -1,3 +1,6 @@
-p Year:  #{year}
-p Month: #{month}
-p Day:   #{day}
+extends layout
+
+block content
+  p Year:  #{year}
+  p Month: #{month}
+  p Day:   #{day}
