--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,2 +1,5 @@
 /* You could include static styles heres */
 table td { border: solid 1px; padding: 10px; }
+
+img.logo { width:90px; } 
+h1.logo { display:inline; }
