--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     a(href='/')
-      h1 Pattern Journal
+      img.logo(src='/images/journal.png')
+      h1.logo Pattern Journal
     ul
       li
         a(href='/patterns') Patterns
