--- a/views/patterns/new.pug
+++ b/views/patterns/new.pug
@@ -7,5 +7,6 @@ block content
       input(type='text', placeholder='Name', name='name')
     div
       label(for='color') Color:
-      input(type='text', placeholder='Color', name='color')
+      input(type='color', value=`#${Math.floor(Math.random()*16777215).toString(16)}`, style='height:50px;width:100px' name='color')
+    a.nes-btn(href='/patterns') Cancel
     button.nes-btn.is-success(type='submit') Create
