--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,10 +5,11 @@ html
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Press+Start+2P')
     link(rel='stylesheet', href='https://unpkg.com/nes.css@2.2.0/css/nes.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+
+    link(rel='javascript', src='/javascripts/google-auth.js') 
   body
-    a(href='/')
-      img.logo(src='/images/journal.png')
-      h1.logo Pattern Journal
+    include ./header.pug
+   
     include ./menu.pug
     block content
     include ./footer.pug
