--- a/views/menu.pug
+++ b/views/menu.pug
@@ -5,6 +5,6 @@ ul
     li
       a(href='/day/2012/04/20') Day
     li
-      a(onclick='signOut()') Sign Out
+      a(href='/logout') Sign Out
   else
     li wut
