login mostly working

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,8 @@
 extends layout
 
 block content
-  p brought to you by #{yourname}
+  p Welcome to Pattern Journal!
+  ul
+    li Count good and bad habits
+    li Count attendance at a function
+  p Keep track of things, and zoom out to see bigger patterns.
