--- a/views/menu.pug
+++ b/views/menu.pug
@@ -1,10 +1,11 @@
 ul
-  if(true)
+  if(user)
     li
       a(href='/patterns') Patterns
     li
       a(href='/day/2012/04/20') Day
     li
-      a(href='/logout') Sign Out
+      a(href='/logout') Logout
   else
-    li wut
+    li
+      a(href='/login') Login
