--- a/views/header.pug
+++ b/views/header.pug
@@ -2,4 +2,7 @@ a(href='/')
   img.logo(src='/images/journal.png')
   h1.logo Pattern Journal
 if(user)
-  p= `hi ${user.name}`
+  p
+    =` hi ${user.name}`
+    img.nes-avatar.is-rounded.is-medium(src=`${user.imageUrl}`, style='image-rendering: pixelated;')
+    i.nes-icon.large.like
