--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,9 @@ extends layout
 
 block content
   p Welcome to Pattern Journal!
-  ul
+  ul.nes-list.is-circle
     li Count good and bad habits
     li Count attendance at a function
+    li Track how you're eating or sleeping
+    li Track if you feel happy or sad, healthy or sick 
   p Keep track of things, and zoom out to see bigger patterns.
