--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,8 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Press+Start+2P')
-    link(rel='stylesheet', href='https://unpkg.com/nes.css@2.2.0/css/nes.min.css')
+    link(rel='stylesheet', href='/stylesheets/nes.css')
+    link(rel='stylesheet', href='/stylesheets/press-start-font.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     include ./header.pug
