--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,3 +1,4 @@
-#footer
-  p &copy; 2019 ctro 
-    i.nes-icon.large.heart
+div.row
+  div.twelve.columns
+    p &copy; 2019 ctro 
+      i.nes-icon.large.heart
