--- a/views/header.pug
+++ b/views/header.pug
@@ -1,8 +1,10 @@
-a(href='/')
-  img.logo(src='/images/journal.png')
-  h1.logo Pattern Journal
-if(user)
-  p
-    =` hi ${user.name}`
-    img.nes-avatar.is-rounded.is-medium(src=`${user.imageUrl}`, style='image-rendering: pixelated;')
-    i.nes-icon.large.like
+div.row
+  div.twelve.columns
+    a(href='/')
+      img.logo(src='/images/journal.png')
+      h1.logo Pattern Journal
+    if(user)
+      p
+        i.nes-icon.large.like
+        =user.name
+        img.nes-avatar.is-rounded.is-medium(src=`${user.imageUrl}`, style='image-rendering: pixelated;')
