--- a/views/layout-simple.pug
+++ b/views/layout-simple.pug
@@ -2,11 +2,14 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Press+Start+2P')
-    link(rel='stylesheet', href='https://unpkg.com/nes.css@2.2.0/css/nes.min.css')
+    link(rel='stylesheet', href='/stylesheets/normalize.css')
+    link(rel='stylesheet', href='/stylesheets/skeleton.css')
+    link(rel='stylesheet', href='/stylesheets/nes.css')
+    link(rel='stylesheet', href='/stylesheets/press-start-font.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-
   body
-    include ./header.pug
-    block content
-    include ./footer.pug
+    div.container
+      include ./includes/header.pug
+      include ./includes/flash.pug
+      block content
+      include ./includes/footer.pug
