--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,8 +9,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     div.container
-      include ./header.pug
-      include ./menu.pug
-      include ./flash.pug
+      include ./includes/header.pug
+      include ./includes/menu.pug
+      include ./includes/flash.pug
       block content
-      include ./footer.pug
+      include ./includes/footer.pug
