--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,4 +1,6 @@
-div.row
-  div.twelve.columns
+div.row(style="padding-top:3em")
+  div.four.columns &nbsp;
+  div.four.columns
     p &copy; 2019 ctro 
       i.nes-icon.large.heart
+  div.four.columns &nbsp;
