--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -3,8 +3,5 @@ div.row
     a(href='/')
       img.logo(src='/images/journal.png')
       h1.logo Pattern Journal
-    if(user)
-      p
-        i.nes-icon.large.like
-        =user.name
-        img.nes-avatar.is-rounded.is-medium(src=`${user.imageUrl}`, style='image-rendering: pixelated;')
+      img.logo(src='/images/journal.png')
+  
