--- a/views/includes/menu.pug
+++ b/views/includes/menu.pug
@@ -1,5 +1,5 @@
 div.row
-  div.two.columns
+  div.four.columns
     ul.nes-list.is-disc
       if(user)
         li
@@ -8,7 +8,7 @@ div.row
           a(href='/patterns') Patterns
       else
         
-  div.ten.columns
+  div.eight.columns
     ul.nes-list.is-disc(style="float:right")
       if(user)
         li
