--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    include ./includes/tracking.js
     title= title
     link(rel='stylesheet', href='/stylesheets/normalize.css')
     link(rel='stylesheet', href='/stylesheets/skeleton.css')
