--- a/views/day/day.pug
+++ b/views/day/day.pug
@@ -8,10 +8,10 @@ block content
       i.nes-icon.is-medium.star
   div.row()
     div.four.columns(style="text-align:center")
-      a(href=`/day/${ydayLink}`) Last Day
+      a(href=`/day/${mYesterday.format("YYYY/MM/DD")}`)= `◀ ${mYesterday.format("YYYY-MM-DD")}`
     div.four.columns &nbsp; 
     div.four.columns(style="text-align:center")
-      a(href=`/day/${tmrwLink}`) Next Day
+      a(href=`/day/${mTomorrow.format("YYYY/MM/DD")}`)= `${mTomorrow.format("YYYY-MM-DD")} ▶`
 
   each pattern, index in patterns
     if(index % 3 === 0)
