Save day note, and tests

--- a/views/day/day.pug
+++ b/views/day/day.pug
@@ -31,5 +31,5 @@ block content
     // /div if it's time to get a newline, or if we're out of patterns.
     if ((index % 3 === 2) || index+1 === patterns.length )
       | </div>
-
-          
+  
+  include ./note.pug
