--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h4 Welcome to Pattern Journal!
+  h4 Welcome!
   ul.nes-list.is-disc(style="padding:2em;")
     li Count good and bad habits
     li Count attendance at a function
