--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,8 @@ html
     link(rel='stylesheet', href='/stylesheets/press-start-font.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    script
+      include ./includes/pj.js
     div.container
       include ./includes/header.pug
       include ./includes/flash.pug
