--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,7 +1,12 @@
-div.row
+div.row(style="text-align:center")
   div.twelve.columns
     a(href='/')
       img.logo(src='/images/journal.png')
       h1.logo Pattern Journal
       img.logo(src='/images/journal.png')
+  if(user)
+    div.twelve.columns
+      button.nes-btn(onclick="goToToday()" href="#")= `🌞Go to Today🌞`
+
+
   
